TSK-1282: replaced all usages of Arrays.asList with List.of