@@ -10,7 +10,6 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -67,7 +66,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testGetTotalNumbersOfClassificationReport() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
@@ -130,7 +129,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testGetClassificationReportWithReportLineItemDefinitions() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
@@ -198,7 +197,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testGetTotalNumbersOfDetailedClassificationReport() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
@@ -264,7 +263,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testGetDetailedClassificationReportWithReportLineItemDefinitions() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
@@ -338,7 +337,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testGetTaskIdsForSelectedItems() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
@@ -417,7 +416,7 @@ class ClassificationReportBuilderImplTest {
   @Test
   void testListCustomAttributeValuesForCustomAttributeName() throws Exception {
     final List<String> workbasketIds = List.of("WBI:000000000000000000000000000000000001");
-    final List<TaskState> states = Arrays.asList(TaskState.CLAIMED, TaskState.READY);
+    final List<TaskState> states = List.of(TaskState.CLAIMED, TaskState.READY);
     final List<String> categories = List.of("EXTERN");
     final List<String> domains = List.of("DOMAIN_A");
     final List<String> classificationIds = List.of("L10000");
